--- a/node-ui/src/app/settings/settings.component.css
+++ b/node-ui/src/app/settings/settings.component.css
@@ -36,11 +36,3 @@ table {
 .mat-row {
   background-color: #fbfbfb;
 }
-
-.settings-button {
-  width: auto;
-  height: auto;
-  padding: 10px 10px 10px 10px;
-  display: inline-block;
-  text-align: center;
-}
